--- a/preprocess_car.ipynb
+++ b/preprocess_car.ipynb
@@ -27,13 +27,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "a4a38022",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your file path here\n",
-    "# folder_path = Path(r\"C:\\Udacity_car_data\\data\")\n",
     "folder_path = Path(r\"C:\\self-driving-car\\data\")"
    ]
   },
@@ -689,7 +688,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "torchCPUenv",
+   "display_name": "torchGPUenv",
    "language": "python",
    "name": "python3"
   },
@@ -703,7 +702,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
